text-alignment fix

--- a/static/spoken/css/main.css
+++ b/static/spoken/css/main.css
@@ -745,5 +745,13 @@ pre.custom-jumbotron b {
     font-size: 12px;
 }
 .announcement{
+        font-size: 14px;
+        font-weight: bold;
+        color: white;
+        border-radius: 0px;
         margin-bottom: 0px;
-    }
+        }
+.text-container{
+        text-align:center;
+        padding: 0 60px;
+}
